[tool.poetry]
name = "Forensik21"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# python = "^3.8"
python = "^3.9.5"
pywin32 = "^301"
SQLAlchemy = "^1.4.17"
tksheet = "^5.0.25"
tkcalendar = "^1.6.1"
lz4 = "^3.1.3"
Tcl = "^0.2"
python-dateutil = "^2.8.1"
PyPubSub = "^4.0.3"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
